# img-parts

./: CHANGES.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: README.md  list-chunks.rs
examples/image-rs/: Cargo.toml  README.md
examples/image-rs/src/: main.rs
src/: common.rs  encoder.rs  error.rs  exif.rs  jpeg.rs  lib.rs  riff.rs  traits.rs  util.rs  vp8.rs  webp.rs
src/encoder/: mod.rs  read.rs
src/jpeg/: entropy.rs  image.rs  markers.rs  mod.rs  segment.rs
src/png/: chunk.rs  image.rs  mod.rs
src/webp/: flags.rs  mod.rs
tests/: every_image.rs  exif_jpeg.rs  exif_webp.rs  extract_jpeg.rs  extract_webp.rs  inject_jpeg.rs  inject_webp.rs  reqwrite_jpeg.rs  rewrite_png.rs  rewrite_webp.rs
tests/images/: P1133897_AdobeRGB.exif  P1133897_sRGB.exif
