[package]
name = "img-parts"
version = "0.2.3" # remember to update html_root_url and README.md
authors = ["Paolo Barbolini <paolo@paolo565.org>"]
description = "Low level crate for reading and writing Jpeg, Png and RIFF image containers"
license = "MIT/Apache-2.0"
repository = "https://github.com/paolobarbolini/img-parts"
categories = ["multimedia::images", "multimedia::encoding", "parser-implementations"]
keywords = ["jpeg", "png", "icc", "exif", "no_std"]
readme = "README.md"
edition = "2018"

exclude = [
    "tests/",
]

[dependencies]
bytes = { version = "1", default-features = false }
crc32fast = { version = "1.1.1", default-features = false }
miniz_oxide = "0.5"

[features]
default = ["std"]
std = ["bytes/std", "crc32fast/std"]

[package.metadata.docs.rs]
targets = []
rustdoc-args = ["--cfg", "docsrs"]
