[package]
name = "img-parts"
version = "0.3.2" # remember to update README.md
description = "Low level crate for reading and writing Jpeg, Png and RIFF image containers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paolobarbolini/img-parts"
categories = ["multimedia::images", "multimedia::encoding", "parser-implementations"]
keywords = ["jpeg", "png", "icc", "exif", "no_std"]
readme = "README.md"
edition = "2021"
rust-version = "1.57"

exclude = [
    "tests/",
]

[dependencies]
bytes = { version = "1", default-features = false }
crc32fast = { version = "1.1.1", default-features = false }
miniz_oxide = "0.8"

[features]
default = ["std"]
std = ["bytes/std", "crc32fast/std", "miniz_oxide/std"]

[package.metadata.docs.rs]
targets = []
rustdoc-args = ["--cfg", "docsrs"]
